Use \tl_to_str:n not \etex_detokenize:D
A few uses where the documented syntax applies so the :D form is not
needed. A slight rearrangement of definition order is required.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1387,12 +1387,19 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\token_to_meaning:N, \token_to_str:N, \cs_meaning:N}
+% \begin{macro}[EXP]{\token_to_meaning:N, \cs_meaning:N}
 %   Examining a control sequence or token.
 %    \begin{macrocode}
 \tex_let:D \token_to_meaning:N \tex_meaning:D
-\tex_let:D \token_to_str:N     \tex_string:D
 \tex_let:D \cs_meaning:N       \tex_meaning:D
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\tl_to_str:n, \token_to_str:N}
+%   Making strings.
+%    \begin{macrocode}
+\tex_let:D \tl_to_str:n        \etex_detokenize:D
+\tex_let:D \token_to_str:N     \tex_string:D
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1830,7 +1837,7 @@
 %   defining function.  The sixth is the parameters to use (possibly
 %   empty), the seventh is the list of forms to define, the eighth is the
 %   replacement text which we will augment when defining the forms.
-%   The use of \cs{etex_detokenize:D} makes the later loop more robust.
+%   The use of \cs{tl_to_str:n} makes the later loop more robust.
 %    \begin{macrocode}
 \cs_set_protected:Npn \__prg_generate_conditional:nnNnnnnn #1#2#3#4#5#6#7#8
   {
@@ -1843,7 +1850,7 @@
       {
         \exp_not:N \__prg_generate_conditional:nnnnnnw
         \exp_not:n { {#4} {#5} {#1} {#2} {#6} {#8} }
-        \etex_detokenize:D {#7}
+        \tl_to_str:n {#7}
         \exp_not:n { , \q_recursion_tail , \q_recursion_stop }
       }
   }
@@ -1952,7 +1959,7 @@
           \__cs_split_function:NN #2 \prg_do_nothing:
           \__cs_split_function:NN #3 \prg_do_nothing:
           \exp_not:N #1
-          \etex_detokenize:D {#4}
+          \tl_to_str:n {#4}
           \exp_not:n { , \q_recursion_tail , \q_recursion_stop }
       }
   }
