--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1309,7 +1309,7 @@
     \exp_after:wN #1
     \exp_after:wN \@@_generate_variant:nnNN
     \exp_after:wN #1
-    \etex_detokenize:D {#2} , \scan_stop: , \q_recursion_stop
+    \tl_to_str:n {#2} , \scan_stop: , \q_recursion_stop
   }
 %    \end{macrocode}
 % \end{macro}
