--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2313,10 +2313,7 @@
 % \subsection{Using token lists}
 %
 % \begin{macro}{\tl_to_str:n}
-%   Another name for a primitive.
-%    \begin{macrocode}
-\cs_new_eq:NN \tl_to_str:n \etex_detokenize:D
-%    \end{macrocode}
+%   Another name for a primitive: defined in \pkg{l3basics}.
 % \end{macro}
 %
 % \begin{macro}{\tl_to_str:N, \tl_to_str:c}
