A few places where we acutally want roman numerals
Looking over the use of \tex_romannumeral:D, these cases do actually
expand to numerals rather than being expansion tricks. As such, they should
use the (internal) interface \__int_to_roman:w.

--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -236,7 +236,7 @@
 \cs_new:Npn \@@_ln_x_ii:wnnnn #1; #2#3#4#5
   {
     \exp_after:wN \@@_ln_div_after:Nw
-    \cs:w c_@@_ln_ \tex_romannumeral:D #1 _fixed_tl \exp_after:wN \cs_end:
+    \cs:w c_@@_ln_ \__int_to_roman:w #1 _fixed_tl \exp_after:wN \cs_end:
     \__int_value:w
       \exp_after:wN \@@_ln_x_iv:wnnnnnnnn
       \int_use:N \__int_eval:w
@@ -760,7 +760,7 @@
 \cs_new:Npn \@@_exp_pos_large:NnnNwn #1#2#3 #4#5; #6
   {
     \exp_after:wN \exp_after:wN
-    \cs:w @@_exp_large_\tex_romannumeral:D #6:wN \exp_after:wN \cs_end:
+    \cs:w @@_exp_large_ \__int_to_roman:w #6 :wN \exp_after:wN \cs_end:
     \exp_after:wN \c_@@_one_fixed_tl
     \exp_after:wN ;
     \__int_value:w #3 #4 \exp_stop_f:
