Replaced \tex_romannumeral:D ... \c_zero with \exp:w ... \exp_end Replaced \tex_romannumeral:D ... -`0     with \exp:w ... \ex_continue_f:w Replaced \__int_to_roman:w  where it was there only for expansion purposes
Have not tried to do all of that in the fp code (probably several \c_zero's need to be changed there but I'll thought I better leave this to somebody understanding this code by heart :-)

May have missed one or the other ... so a second sweep is advisable

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2166,22 +2166,22 @@
 %    \begin{macrocode}
 \cs_new:Npn \tl_case:Nn #1#2
   {
-    \tex_romannumeral:D
+    \exp:w
     \@@_case:NnTF #1 {#2} { } { }
   }
 \cs_new:Npn \tl_case:NnT #1#2#3
   {
-    \tex_romannumeral:D
+    \exp:w
     \@@_case:NnTF #1 {#2} {#3} { }
   }
 \cs_new:Npn \tl_case:NnF #1#2#3
   {
-    \tex_romannumeral:D
+    \exp:w
     \@@_case:NnTF #1 {#2} { } {#3}
   }
 \cs_new:Npn \tl_case:NnTF #1#2
   {
-    \tex_romannumeral:D
+    \exp:w
     \@@_case:NnTF #1 {#2}
   }
 \cs_new:Npn \@@_case:NnTF #1#2#3#4
@@ -2506,7 +2506,7 @@
 % \begin{macro}[EXP,aux]{\@@_act_space:wwnNNN}
 % \begin{macro}[EXP,aux]{\@@_act_end:w}
 %   To help control the expansion, \cs{@@_act:NNNnn} should always
-%   be proceeded by \tn{romannumeral} and ends by producing \cs{c_zero}
+%   be proceeded by \cs{exp:w} and ends by producing \cs{exp_end:}
 %   once the result has been obtained. Then loop over tokens,
 %   groups, and spaces in |#5|. The marker \cs{q_@@_act_mark}
 %   is used both to avoid losing outer braces and to detect the
@@ -2524,8 +2524,8 @@
 %   In the loop, we check how the token list begins and act
 %   accordingly. In the \enquote{normal} case, we may have
 %   reached \cs{q_@@_act_mark}, the end of the list. Then
-%   leave \cs{c_zero} and the result in the input stream,
-%   to terminate the expansion of \tn{romannumeral}.
+%   leave \cs{exp_end:} and the result in the input stream,
+%   to terminate the expansion of \cs{exp:w}.
 %   Otherwise, apply the relevant function to the
 %   \enquote{arguments}, |#3|
 %   and to the head of the token list. Then repeat the loop.
@@ -2554,7 +2554,7 @@
     {#3} #4
   }
 \cs_new:Npn \@@_act_end:wn #1 \@@_act_result:n #2
-  { \group_align_safe_end: \c_zero #2 }
+  { \group_align_safe_end: \exp_end: #2 }
 \cs_new:Npn \@@_act_group:nwnNNN #1 #2 \q_@@_act_stop #3#4#5
   {
     #5 {#3} {#1}
@@ -2602,7 +2602,7 @@
   {
     \etex_unexpanded:D \exp_after:wN
       {
-        \tex_romannumeral:D
+        \exp:w
         \@@_act:NNNnn
           \@@_reverse_normal:nN
           \@@_reverse_group_preserve:nn
@@ -2907,20 +2907,20 @@
 %   |\if_false: { \fi: ... }| construction) both to hide potential
 %   alignment tab characters from \TeX{} in a table, and to allow for
 %   removing what remains of the token list after its first space.  The
-%   \cs{tex_romannumeral:D} and \cs{c_zero} ensure that the result of a
+%   \cs{exp:w} and \cs{exp_end:} ensure that the result of a
 %   single step of expansion directly yields a balanced token list (no
 %   trailing closing brace).
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_head_is_space:n #1 { p , T , F , TF }
   {
-    \tex_romannumeral:D \if_false: { \fi:
+    \exp:w \if_false: { \fi:
       \@@_if_head_is_space:w ? #1 ? ~ }
   }
 \cs_new:Npn \@@_if_head_is_space:w #1 ~
   {
     \tl_if_empty:oTF { \use_none:n #1 }
-      { \exp_after:wN \c_zero \exp_after:wN \prg_return_true: }
-      { \exp_after:wN \c_zero \exp_after:wN \prg_return_false: }
+      { \exp_after:wN \exp_end: \exp_after:wN \prg_return_true: }
+      { \exp_after:wN \exp_end: \exp_after:wN \prg_return_false: }
     \exp_after:wN \use_none:n \exp_after:wN { \if_false: } \fi:
   }
 %    \end{macrocode}
