--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1378,15 +1378,19 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\exp_after:wN, \exp_not:N, \exp_not:n}
-%    The three |\exp_| functions are used in the \textsf{l3expan} module
+%    The five |\exp_| functions are used in the \textsf{l3expan} module
 %    where they are described.
 %    \begin{macrocode}
 \tex_let:D \exp_after:wN       \tex_expandafter:D
 \tex_let:D \exp_not:N          \tex_noexpand:D
 \tex_let:D \exp_not:n          \etex_unexpanded:D
+\tex_let:D \exp:w              \tex_romannumeral:D
+\tex_chardef:D \exp_end:  = 0 ~
 %    \end{macrocode}
 % \end{macro}
 %
+
+
 % \begin{macro}[EXP]{\token_to_meaning:N, \cs_meaning:N}
 %   Examining a control sequence or token.
 %    \begin{macrocode}
@@ -1716,18 +1720,18 @@
 % interface.
 %
 % \begin{macro}[EXP]{\prg_return_true:, \prg_return_false:}
-%   The idea here is that \cs{__int_to_roman:w} will expand fully any
+%   The idea here is that \cs{exp:w} will expand fully any
 %   \cs{else:} and the \cs{fi:} that are waiting to be discarded,
-%   before reaching the \cs{c_zero} which will leave the expansion null.
+%   before reaching the \cs{exp_end:} which will leave the expansion null.
 %   The code can then leave either the first or second argument in the
 %   input stream. This means that all of the branching code has to contain
 %   at least two tokens: see how the logical tests are actually implemented
 %   to see this.
 %    \begin{macrocode}
 \cs_set_nopar:Npn \prg_return_true:
-  { \exp_after:wN \use_i:nn  \__int_to_roman:w }
+  { \exp_after:wN \use_i:nn  \exp:w }
 \cs_set_nopar:Npn \prg_return_false:
-  { \exp_after:wN \use_ii:nn \__int_to_roman:w}
+  { \exp_after:wN \use_ii:nn \exp:w}
 %    \end{macrocode}
 %   An extended state space could be implemented by including a more
 %   elaborate function in place of \cs{use_i:nn}/\cs{use_ii:nn}. Provided
@@ -1894,7 +1898,7 @@
 %   following arguments: 1: \texttt{set} or \texttt{new}, 2: empty or
 %   \texttt{\_protected}, 3: function name 4: signature, 5: parameter
 %   text (or empty), 6: replacement. Remember that the logic-returning
-%   functions expect two arguments to be present after \cs{c_zero}:
+%   functions expect two arguments to be present after \cs{exp_end:}:
 %   notice the construction of the different variants relies on this,
 %   and that the |TF| variant will be slightly faster than the |T|
 %   version.  The |p| form is only valid for expandable tests, we check
@@ -1910,7 +1914,7 @@
     \fi:
       {
         \exp_args:cc { cs_ #2 #3 :Npn } { #4 _p: #5 } #6
-          { #7 \c_zero \c_true_bool \c_false_bool }
+          { #7 \exp_end: \c_true_bool \c_false_bool }
       }
       {
         \__msg_kernel_error:nnx { kernel } { protected-predicate }
@@ -1921,19 +1925,19 @@
     #1 \q_stop #2#3#4#5#6#7
   {
     \exp_args:cc { cs_ #2 #3 :Npn } { #4 : #5 T } #6
-      { #7 \c_zero \use:n \use_none:n }
+      { #7 \exp_end: \use:n \use_none:n }
   }
 \cs_set_protected:Npn \__prg_generate_F_form:wnnnnnn
     #1 \q_stop #2#3#4#5#6#7
   {
     \exp_args:cc { cs_ #2 #3 :Npn } { #4 : #5 F } #6
-      { #7 \c_zero { } }
+      { #7 \exp_end: { } }
   }
 \cs_set_protected:Npn \__prg_generate_TF_form:wnnnnnn
     #1 \q_stop #2#3#4#5#6#7
   {
     \exp_args:cc { cs_ #2 #3 :Npn } { #4 : #5 TF } #6
-      { #7 \c_zero }
+      { #7 \exp_end: }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2088,32 +2092,37 @@
 %   The character codes are different, thus the \cs{if:w} test is false,
 %   and \TeX{} reads \cs{__cs_to_str:N} after turning the following
 %   control sequence into a string; this auxiliary removes the escape
-%   character, and stops the expansion of the initial \cs{__int_to_roman:w}.
+%   character, and stops the expansion of the initial \cs{exp:w}.
 %   The second case is that the escape character is not printable. Then
 %   the \cs{if:w} test is unfinished after reading a the space from
 %   \verb*|\token_to_str:N \ |, and the auxiliary \cs{__cs_to_str:w}
 %   is expanded, feeding |-| as a second character for the test;
 %   the test is false, and \TeX{} skips to \cs{fi:}, then performs
-%   \cs{token_to_str:N}, and stops the \cs{__int_to_roman:w} with \cs{c_zero}.
+%   \cs{token_to_str:N}, and stops the \cs{exp:w} with \cs{exp_end:}.
 %   The last case is that the escape character is itself a space. In this
 %   case, the \cs{if:w} test is true, and the auxiliary \cs{__cs_to_str:w}
-%   comes into play, inserting |-\__int_value:w|, which expands \cs{c_zero}
-%   to the character |0|. The initial \cs{__int_to_roman:w} then sees
+%   comes into play, inserting |-\__int_value:w|, which expands \cs{exp_end:}
+%   to the character |0|. The initial \cs{exp:w} then sees
 %   |0|, which is not a terminated number, followed by the escape character,
-%   a space, which is removed, terminating the argument of
-%   \cs{__int_to_roman:w}.
+%   a space, which is removed, terminating the expansion of
+%   \cs{exp:w}.
 %   In all three cases, \cs{cs_to_str:N} takes two expansion steps
-%   to be fully expanded.
+%   to be fully expanded.\footnote{Frank: fix documentation}
 %    \begin{macrocode}
 \cs_set_nopar:Npn \cs_to_str:N
   {
-    \__int_to_roman:w
+    \exp:w
       \if:w \token_to_str:N \ \__cs_to_str:w \fi:
       \exp_after:wN \__cs_to_str:N \token_to_str:N
   }
-\cs_set:Npn \__cs_to_str:N #1 { \c_zero }
+\cs_set:Npn \__cs_to_str:N #1 { \exp_end: }
 \cs_set:Npn \__cs_to_str:w #1 \__cs_to_str:N
-  { - \__int_value:w \fi: \exp_after:wN \c_zero }
+  { \exp_continue_f:w \exp_after:wN \use_none:nn \fi: \exp_after:wN \exp_end: }
+%    \end{macrocode}
+%    A slightly more compact coding would be using the fact that we
+%    know how \cs{exp_end:} is implemented.
+%    \begin{macrocode}
+%  { - \__int_value:w \fi: \exp_after:wN \exp_end: }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
