--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -465,7 +465,7 @@
     \else:
       \exp_after:wN \@@_exp_after_special:nNNw
     \fi:
-    { \tex_romannumeral:D -`0 #1 }
+    { \exp:w \exp_continue_f:w #1 }
     #2
   }
 %    \end{macrocode}
@@ -1056,7 +1056,7 @@
   }
 \cs_new:Npn \@@_expand_loop:nwnN #1#2 \s_@@_mark #3 #4
   {
-    \exp_after:wN #4 \tex_romannumeral:D -`0
+    \exp_after:wN #4 \exp:w \exp_continue_f:w
     #2
     \s_@@_mark { #3 #1 } #4
   }
