--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2003,9 +2003,9 @@
 %   is an extra subtlety: if the user inserts tokens for error recovery,
 %   they should be kept. Thus we also use an odd space character
 %   (with category code $7$) and keep tokens until that space character,
-%   dropping everything else until \cs{q_stop}. The \cs{c_zero} prevents
+%   dropping everything else until \cs{q_stop}. The \cs{exp_end:} prevents
 %   losing braces around the user-inserted text if any, and stops the
-%   expansion of \tn{romannumeral}.
+%   expansion of \cs{exp:w}.
 %    \begin{macrocode}
 \group_begin:
 \char_set_catcode_math_superscript:N \^
@@ -2019,11 +2019,11 @@
       {
         \exp_not:n
           {
-            \tex_romannumeral:D
+            \exp:w
             \exp_after:wN \exp_after:wN
             \exp_after:wN \@@_expandable_error:w
             \exp_after:wN \exp_after:wN
-            \exp_after:wN \c_zero
+            \exp_after:wN \exp_end:
           }
         \exp_not:N \use:n { \exp_not:c { LaTeX3~error: } ^ #1 } ^
       }
