--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1234,7 +1234,7 @@
   }
 \cs_new:Npn \@@_compare:w #1 \__prg_compare_error:
   {
-    \exp_after:wN \if_false: \tex_romannumeral:D -`0
+    \exp_after:wN \if_false: \exp:w \exp_continue_f:w
       \@@_compare:wNN #1 ? { = \@@_compare_end:w \else: } \q_stop
   }
 \exp_args:Nno \use:nn
@@ -1278,22 +1278,22 @@
 %    \begin{macrocode}
 \cs_new:Npn \dim_case:nnTF #1
   {
-    \tex_romannumeral:D
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \dim_eval:n {#1} }
   }
 \cs_new:Npn \dim_case:nnT #1#2#3
   {
-    \tex_romannumeral:D
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \dim_eval:n {#1} } {#2} {#3} { }
   }
 \cs_new:Npn \dim_case:nnF #1#2
   {
-    \tex_romannumeral:D
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \dim_eval:n {#1} } {#2} { }
   }
 \cs_new:Npn \dim_case:nn #1#2
   {
-    \tex_romannumeral:D
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \dim_eval:n {#1} } {#2} { } { }
   }
 \cs_new:Npn \@@_case:nnTF #1#2#3#4
