Replaced \tex_romannumeral:D ... \c_zero with \exp:w ... \exp_end Replaced \tex_romannumeral:D ... -`0     with \exp:w ... \ex_continue_f:w Replaced \__int_to_roman:w  where it was there only for expansion purposes
Have not tried to do all of that in the fp code (probably several \c_zero's need to be changed there but I'll thought I better leave this to somebody understanding this code by heart :-)

May have missed one or the other ... so a second sweep is advisable

--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -584,7 +584,7 @@
 %   \begin{syntax}
 %     \cs{__bigint_parse:n} \Arg{bigintexpr}
 %   \end{syntax}
-%   This function must appear after \tn{romannumeral} or a command set
+%   This function must appear after \cs{exp:w} or a command set
 %   equal to it.  Evaluates the \meta{big integer expression} and
 %   leaves the result in the input stream, in the internal form
 %   specified above.
@@ -665,11 +665,13 @@
 %   \cs{@@_exp_to_f:w} and \cs{@@_exp_to_f:n} convert it to
 %   \texttt{f}-expansion.  The \texttt{n}-type function is used to get
 %   rid of unwanted braces in the user's big integer expression.
+%
+% Most of these are now available from pkg{l3expan}
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_exp:w \tex_romannumeral:D
-\cs_new_eq:NN \@@_exp_stop: \c_zero
-\cs_new_nopar:Npn \@@_exp_to_f:w { -`0 }
-\cs_new:Npn \@@_exp_to_f:n #1 { -`0 #1 }
+%\cs_new_eq:NN \@@_exp:w \exp:w
+%\cs_new_eq:NN \@@_exp_stop: \exp_end:
+%\cs_new_eq:NN \@@_exp_to_f:w \exp_continue_f:w
+\cs_new:Npn \@@_exp_to_f:n #1 { -`0 #1 }         % not provided in l3expan
 %    \end{macrocode}
 % \end{macro}
 %
@@ -767,7 +769,7 @@
       {
         \if_int_compare:w \c_one < ##1 1 \token_to_str:N ##2 \exp_stop_f:
           \token_to_str:N ##2
-          \exp_after:wN #2 \exp_after:wN ##1 \@@_exp:w
+          \exp_after:wN #2 \exp_after:wN ##1 \exp:w
         \else:
           \@@_parse_return_semicolon:w #3 ##2
         \fi:
@@ -855,7 +857,7 @@
     \@@_int_value:w 1
       \@@_exp_after_f_aux:NNNNNNNN #4
       {
-        \exp_after:wN ; \@@_exp:w \@@_exp_to_f:w
+        \exp_after:wN ; \exp:w \exp_continue_f:w
         \use_none_delimit_by_q_stop:w
       }
       ???? ???? \q_stop #1
@@ -885,7 +887,7 @@
 \cs_new_nopar:Npn \@@_parse_do:nn
   {
     \exp_after:wN \@@_parse_do_aux:w
-    \@@_exp:w \@@_parse:n
+    \exp:w \@@_parse:n
   }
 \cs_new:Npn \@@_parse_do_aux:w #1 ; #2 { #2 #1 ; }
 %    \end{macrocode}
@@ -894,7 +896,7 @@
 %
 % \begin{macro}[int, EXP]{\@@_parse:n}
 % \begin{macro}[aux, EXP]{\@@_parse_after:ww}
-%   This should be called within \cs{@@_exp:w}.
+%   This should be called within \cs{exp:w}.
 %   The \cs{@@_parse_operand:Nw} function will perform
 %   computations until reaching an operation with precedence
 %   \cs{c_minus_one} or less, namely, the end of the expression.  The
@@ -902,12 +904,12 @@
 %   parsed version of an infix operator, and \cs{@@_parse_infix_end:N}
 %   has infinitely negative precedence.  Finally, clean up a
 %   (well-defined) set of extra tokens and stop the initial expansion
-%   with \cs{c_zero}.
+%   with \cs{exp_end:}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse:n #1
   {
     \exp_after:wN \@@_parse_after:ww
-    \@@_exp:w
+    \exp:w
       \@@_parse_operand:Nw \c_minus_one
       \@@_exp_to_f:n #1
       \s_@@_mark \@@_parse_infix_end:N
@@ -915,7 +917,7 @@
   }
 \cs_new:Npn \@@_parse_after:ww
     #1@ \@@_parse_infix_end:N \s_@@_stop
-  { \c_zero #1 }
+  { \exp_end: #1 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -924,18 +926,18 @@
 % \begin{macro}[aux, EXP]{\@@_parse_continue:NwN}
 %   This is just a shorthand which sets up both
 %   \cs{@@_parse_continue:NwN} and \cs{@@_parse_one:Nw} with the same
-%   precedence. Note the trailing \cs{@@_exp:w}. This function should
+%   precedence. Note the trailing \cs{exp:w}. This function should
 %   thus be used with much care.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_operand:Nw #1
   {
-    \@@_exp_to_f:w
+    \exp_continue_f:w
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \@@_exp:w \@@_exp_to_f:w
+    \exp:w \exp_continue_f:w
     \exp_after:wN \@@_parse_one:Nw
     \exp_after:wN #1
-    \@@_exp:w
+    \exp:w
   }
 \cs_new:Npn \@@_parse_continue:NwN #1 #2 @ #3 { #3 #1 #2 @ }
 %    \end{macrocode}
@@ -951,8 +953,8 @@
   {
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \@@_exp:w \@@_exp_to_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
-    \@@_exp:w \@@_exp_to_f:w #5 #1
+    \exp:w \exp_continue_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
+    \exp:w \exp_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1031,19 +1033,19 @@
     \cs:w @@_exp_after \@@_type_from_scan:N #2 _f:nw \cs_end:
       {
         \exp_after:wN \@@_parse_infix:NN
-        \exp_after:wN #1 \@@_exp:w \@@_exp_to_f:n
+        \exp_after:wN #1 \exp:w \@@_exp_to_f:n
       }
     #2
   }
 \cs_new:Npn \@@_exp_after_mark_f:nw #1
   {
     \msg_expandable_error:nn { bigint } { early-end }
-    \exp_after:wN \c_@@_zero_bigint \@@_exp:w \@@_exp_to_f:w #1
+    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
   }
 \cs_new:cpn { @@_exp_after_?_f:nw } #1#2
   {
     \msg_expandable_error:nnn { bigint } { bad-var } {#2}
-    \exp_after:wN \c_@@_zero_bigint \@@_exp:w \@@_exp_to_f:w #1
+    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
   }
 %<*package>
 \group_begin:
@@ -1052,7 +1054,7 @@
     {
       \cs_gset:cpn { @@_exp_after_?_f:nw } #1#2
         {
-          \exp_after:wN \c_@@_zero_bigint \@@_exp:w \@@_exp_to_f:w #1
+          \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
           \str_if_eq:nnTF {#2} { \protect }
             {
               \cs_if_eq:NNTF #2 \@unexpandable@protect { \use_i:nn } { \use:n }
@@ -1085,7 +1087,7 @@
     \exp_after:wN #1
     \exp_after:wN \s_@@
     \exp_after:wN \@@_chk:w
-    \@@_exp:w \@@_exp_to_f:w
+    \exp:w \exp_continue_f:w
     \exp_after:wN \use:nn
     \exp_after:wN \@@_parse_one_register_aux:N
     \exp_after:wN { \@@_int_value:w #2 }
@@ -1140,13 +1142,13 @@
     \cs_if_exist:cTF { @@_parse_infix_ \token_to_str:N #1 :N }
       {
         \msg_expandable_error:nnn { bigint } { missing-number } {#1}
-        \exp_after:wN \c_@@_zero_bigint \@@_exp:w \@@_exp_to_f:w
+        \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w
         \@@_parse_infix:NN #3 #1
       }
       {
         \msg_expandable_error:nnn { bigint } { unknown-symbol } {#1}
         \exp_after:wN \@@_parse_one:Nw \exp_after:wN #3
-        \@@_exp:w \@@_exp_to_f:n
+        \exp:w \@@_exp_to_f:n
       }
   }
 %    \end{macrocode}
@@ -1184,7 +1186,7 @@
   {
     \if:w 0 \exp_not:N #1
       \exp_after:wN \@@_parse_trim_zeros:N
-      \@@_exp:w
+      \exp:w
     \else:
       \@@_parse_trim_end:w #1
     \fi:
@@ -1217,7 +1219,7 @@
 \cs_new_nopar:Npn \@@_parse_decimal:N
   {
     \exp_after:wN \@@_parse_decimal_count:w
-    \@@_exp:w \@@_exp_to_f:w \@@_parse_decimal_aux:N
+    \exp:w \exp_continue_f:w \@@_parse_decimal_aux:N
   }
 \cs_new_nopar:Npn \@@_parse_decimal_aux:N
   {
@@ -1269,7 +1271,7 @@
 \cs_new:Npn \@@_parse_apply_unary:NNNwN #1#2#3#4@#5
   {
     #3 #2 #4 @
-    \@@_exp:w \@@_exp_to_f:w #5 #1
+    \exp:w \exp_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1286,7 +1288,7 @@
     \exp_after:wN #1
     \exp_after:wN ?
     \exp_after:wN \@@_set_sign_o:w
-    \@@_exp:w
+    \exp:w
     \if_int_compare:w \c_twelve < #1
       \@@_parse_operand:Nw #1
     \else:
@@ -1316,7 +1318,7 @@
     {
       \exp_after:wN \@@_parse_lparen_after:NwN
       \exp_after:wN #1
-      \@@_exp:w
+      \exp:w
       \if_int_compare:w #1 = \c_sixteen
         \@@_parse_operand:Nw \c_one
       \else:
@@ -1331,7 +1333,7 @@
           \@@_exp_after_array_f:w #2 \s_@@_stop
           \exp_after:wN \@@_parse_infix:NN
           \exp_after:wN #1
-          \@@_exp:w \@@_exp_to_f:n
+          \exp:w \@@_exp_to_f:n
         }
         {
           \msg_expandable_error:nnn { bigint } { missing } { ) }
@@ -1379,7 +1381,7 @@
       \else:
         \exp_after:wN #1
         \exp_after:wN #2
-        \@@_exp:w \exp_after:wN \@@_exp_to_f:n
+        \exp:w \exp_after:wN \@@_exp_to_f:n
       \fi:
     }
 \group_end:
@@ -1418,7 +1420,7 @@
         \msg_expandable_error:nnn { bigint } { extra } { ) }
         \exp_after:wN \@@_parse_infix:NN
         \exp_after:wN #1
-        \@@_exp:w \exp_after:wN \@@_exp_to_f:n
+        \exp:w \exp_after:wN \@@_exp_to_f:n
       \else:
         \exp_after:wN @
         \exp_after:wN \use_none:n
@@ -1460,7 +1462,7 @@
             \exp_after:wN @
             \exp_after:wN \@@_parse_apply_binary:NwNwN
             \exp_after:wN #2
-            \@@_exp:w
+            \exp:w
             \@@_parse_operand:Nw #4
             \exp_after:wN \@@_exp_to_f:n
           \else:
@@ -1507,7 +1509,7 @@
     \if_int_compare:w #1 < \c_ten
       \exp_after:wN @
       \exp_after:wN \@@_parse_apply_juxtapose:NwwN
-      \@@_exp:w
+      \exp:w
       \@@_parse_operand:Nw \c_ten
       \exp_after:wN \@@_exp_to_f:n
     \else:
@@ -1563,7 +1565,7 @@
 \cs_new:Npn \@@_tree_dp_aux:n #1
   {
     \exp_after:wN \@@_tree_collect:w
-    \@@_exp:w \@@_exp_to_f:w
+    \exp:w \exp_continue_f:w
       \@@_tree_auxi:NNNNNNNN #1 { ? \@@_tree_auxi_end:w } ??????? ;
   }
 \cs_new:Npn \@@_tree_auxi:NNNNNNNN #1#2#3#4#5#6#7#8
@@ -2220,7 +2222,7 @@
 \cs_new:Npn \bigint_use:N #1 { \exp_after:wN \@@_use:w #1 }
 \cs_generate_variant:Nn \bigint_use:N { c }
 \cs_new_nopar:Npn \bigint_eval:n
-  { \exp_after:wN \@@_use:w \@@_exp:w \@@_parse:n }
+  { \exp_after:wN \@@_use:w \exp:w \@@_parse:n }
 \cs_new:Npn \@@_use:w \s_@@ \@@_chk:w #1 . #2#3 ;
   {
     \token_if_eq_meaning:NNTF 0 #2
@@ -2245,7 +2247,7 @@
 % \begin{macro}[int, EXP]{\@@_abs:w}
 %    \begin{macrocode}
 \cs_new_nopar:Npn \bigint_abs:n
-  { \exp_after:wN \@@_abs:w \@@_exp:w \@@_parse:n }
+  { \exp_after:wN \@@_abs:w \exp:w \@@_parse:n }
 \cs_new:Npn \@@_abs:w \s_@@ \@@_chk:w #1 . #2#3 ;
   {
     \token_if_eq_meaning:NNTF 0 #2
@@ -2299,7 +2301,7 @@
 %   Parse the expression with \cs{@@_parse:n}, then \cs{@@_sign:w}.
 %    \begin{macrocode}
 \cs_new_nopar:Npn \bigint_sign:n
-  { \exp_after:wN \@@_sign:w \@@_exp:w \@@_parse:n }
+  { \exp_after:wN \@@_sign:w \exp:w \@@_parse:n }
 \cs_new:Npn \@@_sign:w \s_@@ \@@_chk:w #1 . #2#3 ;
   {
     \token_if_eq_meaning:NNTF 0 #2
@@ -2335,7 +2337,7 @@
 %   Constant token list.
 %    \begin{macrocode}
 \cs_new_protected:Npn \bigint_const:Nn #1#2
-  { \tl_const:Nx #1 { \@@_exp:w \@@_parse:n {#2} } }
+  { \tl_const:Nx #1 { \exp:w \@@_parse:n {#2} } }
 \cs_generate_variant:Nn \bigint_const:Nn { c }
 %    \end{macrocode}
 % \end{macro}
@@ -2446,9 +2448,9 @@
 %   Use \cs{tl_set:Nx} with \cs{@@_parse:n} to evaluate the expression.
 %    \begin{macrocode}
 \cs_new_protected:Npn \bigint_set:Nn #1#2
-  { \tl_set:Nx  #1 { \@@_exp:w \@@_parse:n {#2} } }
+  { \tl_set:Nx  #1 { \exp:w \@@_parse:n {#2} } }
 \cs_new_protected:Npn \bigint_gset:Nn #1#2
-  { \tl_gset:Nx #1 { \@@_exp:w \@@_parse:n {#2} } }
+  { \tl_gset:Nx #1 { \exp:w \@@_parse:n {#2} } }
 \cs_generate_variant:Nn \bigint_set:Nn  { c }
 \cs_generate_variant:Nn \bigint_gset:Nn { c }
 %    \end{macrocode}
@@ -2504,7 +2506,7 @@
 %   ^^A todo: missing!
 % \end{macro}
 %
-% ^^A todo: using \@@_exp:w \@@_parse:n would be faster (no removal of leading 0)
+% ^^A todo: using \exp:w \@@_parse:n would be faster (no removal of leading 0)
 % \begin{macro}[EXP]{\bigint_case:nn}
 % \begin{macro}[EXP, TF]{\bigint_case:nn}
 % \begin{macro}[EXP, aux]{\@@_case:nnTF, \@@_case:nw, \@@_case_end:nw}
@@ -2520,22 +2522,22 @@
 %    \begin{macrocode}
 \cs_new:Npn \bigint_case:nnTF #1
   {
-    \@@_exp:w
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \bigint_eval:n {#1} }
   }
 \cs_new:Npn \bigint_case:nnT #1#2#3
   {
-    \@@_exp:w
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \bigint_eval:n {#1} } {#2} {#3} { }
   }
 \cs_new:Npn \bigint_case:nnF #1#2
   {
-    \@@_exp:w
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \bigint_eval:n {#1} } {#2} { }
   }
 \cs_new:Npn \bigint_case:nn #1#2
   {
-    \@@_exp:w
+    \exp:w
     \exp_args:Nf \@@_case:nnTF { \bigint_eval:n {#1} } {#2} { } { }
   }
 \cs_new:Npn \@@_case:nnTF #1#2#3#4
@@ -2561,7 +2563,7 @@
 \prg_new_conditional:Npnn \bigint_if_odd:n #1 { p , T , F , TF}
   {
     \if_int_odd:w
-        \exp_after:wN \@@_if_odd:w \@@_exp:w \@@_parse:n {#1}
+        \exp_after:wN \@@_if_odd:w \exp:w \@@_parse:n {#1}
       \prg_return_true:
     \else:
       \prg_return_false:
@@ -2570,7 +2572,7 @@
 \prg_new_conditional:Npnn \bigint_if_even:n #1 { p , T , F , TF}
   {
     \if_int_odd:w
-        \exp_after:wN \@@_if_odd:w \@@_exp:w \@@_parse:n {#1}
+        \exp_after:wN \@@_if_odd:w \exp:w \@@_parse:n {#1}
       \prg_return_false:
     \else:
       \prg_return_true:
@@ -2595,7 +2597,7 @@
 %   needed.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \bigint_if_int:n #1 { p , T , F , TF }
-  { \exp_after:wN \@@_if_int:w \@@_exp:w \@@_parse:n {#1} }
+  { \exp_after:wN \@@_if_int:w \exp:w \@@_parse:n {#1} }
 \cs_new:Npn \@@_if_int:w \s_@@ \@@_chk:w #1 . #2 #3 ;
   {
     \if_case:w #1 \exp_stop_f:
@@ -2632,7 +2634,7 @@
 %   leave that to big integers.
 %    \begin{macrocode}
 \cs_new_nopar:Npn \bigint_factor:n
-  { \exp_after:wN \@@_factor:w \@@_exp:w \@@_parse:n }
+  { \exp_after:wN \@@_factor:w \exp:w \@@_parse:n }
 \cs_new:Npn \@@_factor:w \s_@@ \@@_chk:w #1 . #2 #3 ;
   {
     \token_if_eq_meaning:NNTF 0 #2
@@ -2854,7 +2856,7 @@
 \cs_new:Npn \@@_mul:nw #1#2
   {
     \exp_after:wN \@@_mul:wnw
-    \@@_exp:w \@@_exp_to_f:w \@@_mul_digit:nN {#1} #2 ; {#1}
+    \exp:w \exp_continue_f:w \@@_mul_digit:nN {#1} #2 ; {#1}
   }
 \cs_new:Npn \@@_mul:wnw #1 ; #2 #3
   {
@@ -2864,7 +2866,7 @@
         \exp_last_unbraced:Nf \@@_mul:wnw
           {
             \exp_after:wN \@@_add_signed:Nww \exp_after:wN +
-              \@@_exp:w \@@_exp_to_f:w \@@_mul_digit:nN {#2} #3 ;
+              \exp:w \exp_continue_f:w \@@_mul_digit:nN {#2} #3 ;
               #1 0 ;
             ;
           }
@@ -2961,7 +2963,7 @@
       }
       {
         \int_compare:nNnF {#4} = {#5} { \exp_after:wN - }
-        \@@_exp:w \@@_exp_to_f:w
+        \exp:w \exp_continue_f:w
         \tl_if_empty:nTF {#1} { 1 } { \@@_add_signed:Nww + 1 ; #1 ; }
       }
   }
@@ -2987,7 +2989,7 @@
         0
       }
       {
-        \exp_after:wN #5 \@@_exp:w \@@_exp_to_f:w
+        \exp_after:wN #5 \exp:w \exp_continue_f:w
         \exp_args:Nf \@@_div:nnn { \tl_count:n {#4} } {#2} {#4}
         {#1} {#3}
       }
