--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3check.dtx (C) Copyright 2012,2014,2015 The LaTeX3 Project
+%% File l3check.dtx (C) Copyright 2012,2014-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -285,9 +285,11 @@
 %
 % \begin{macro}[int, EXP]{\@@_exp:w, \@@_exp_stop:}
 %   Trigger and stop one-step expansion.
+%
+%  This is now provided from \pkg{l3expan}.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_exp:w \tex_romannumeral:D
-\cs_new_eq:NN \@@_exp_stop: \c_zero
+%\cs_new_eq:NN \@@_exp:w \tex_romannumeral:D
+%\cs_new_eq:NN \@@_exp_stop: \c_zero
 %    \end{macrocode}
 % \end{macro}
 %
@@ -600,7 +602,7 @@
 %   to make sure that the redefinition of expandable macros does not
 %   alter their expansion properties.  Namely, it is important for some
 %   macros that |o|-expanding them twice fully expands them, so the
-%   redefined macro uses \cs{@@_exp:w} and \cs{@@_exp_stop:} to make
+%   redefined macro uses \cs{exp:w} and \cs{exp_end:} to make
 %   sure that its second expansion is the same as the second expansion
 %   of the original macro.
 %
@@ -639,9 +641,9 @@
     \if_meaning:w #1 #3 \else: \cs_new_eq:NN #1 #3 \fi:
     \cs_gset:Npn #3 #4
       {
-        \@@_exp:w
+        \exp:w
         \@@_if_on:nT {#2} { \if_false: { \fi: #6 \if_false: } \fi: }
-        \exp_after:wN \exp_after:wN \exp_after:wN \@@_exp_stop:
+        \exp_after:wN \exp_after:wN \exp_after:wN \exp_end:
         #1 #5
       }
   }
