--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-functions.dtx (C) Copyright 2012-2013 The LaTeX3 Project
+%% File l3fp-functions.dtx (C) Copyright 2012-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -155,7 +155,7 @@
         \exp_after:wN #1
         \exp_after:wN ,
         \exp_after:wN {
-          \tex_romannumeral:D -`0
+          \exp:w \exp_continue_f:w
           \@@_exp_after_array_f:w #2 \s_@@_stop
           \exp_after:wN
         }
