--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3htoks.dtx Copyright (C) 2013 The LaTeX3 Project
+%% File l3htoks.dtx Copyright (C) 2013-2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -311,9 +311,9 @@
         \@@_ignore_spaces_auxiii:NNw
       \fi:
     \fi:
-    \exp_after:wN \@@_ignore_spaces_auxi: \tex_romannumeral:D -`0
+    \exp_after:wN \@@_ignore_spaces_auxi: \exp:w \exp_continue_f:w
   }
-\cs_new_protected:Npn \@@_ignore_spaces_auxiii:NNw #1#2#3-`0
+\cs_new_protected:Npn \@@_ignore_spaces_auxiii:NNw #1#2#3 \exp_continue_f:w
   { #1 #2 \l_@@_peek_next_tl }
 %    \end{macrocode}
 % \end{macro}
