--- a/l3trial/l3ldb/l3precom.dtx
+++ b/l3trial/l3ldb/l3precom.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3precom.dtx Copyright (C) 2012 The LaTeX3 Project
+%% File: l3precom.dtx Copyright (C) 2012, 2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -236,7 +236,7 @@
 \cs_new_protected:Npn \cs_gen_sym:N #1
   {
     \int_gincr:N \g_gen_sym_int
-    \tl_set:Nx #1 { \exp_not:c { l*\int_to_roman:n \g_gen_sym_int } }
+    \tl_set:Nx #1 { \exp_not:c { l*\__int_to_roman:w \g_gen_sym_int } }
 %<precompile>    \exp_after:wN \cs_record_name:N #1
 %    \end{macrocode}
 %   We still want to define the initial value for the new symbol
