changed \exp_end: to \exp_stop:

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2799,8 +2799,8 @@
 %     \@@_act_count_group:nn, \@@_act_count_space:n}
 %   The token count is computed through an \cs{int_eval:n} construction.
 %   Each \texttt{1+} is output to the \emph{left}, into the integer
-%   expression, and the sum is ended by the \cs{exp_end:} inserted by
-%   \cs{@@_act_end:wn} (which is technically implemented as  \cs{c_zero}).
+%   expression, and the sum is ended by the \cs{exp_stop:} inserted by
+%   \cs{@@_act_end:wn} (which is technically implemented as \cs{c_zero}).
 %   Somewhat a hack!
 %    \begin{macrocode}
 \cs_new:Npn \tl_count_tokens:n #1
@@ -3096,7 +3096,7 @@
 \cs_new:Npn \@@_change_case_end:wn #1 \@@_change_case_result:n #2
   {
     \group_align_safe_end:
-    \exp_end:
+    \exp_stop:
     #2
   }
 %    \end{macrocode}
