--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2003,7 +2003,7 @@
 %   is an extra subtlety: if the user inserts tokens for error recovery,
 %   they should be kept. Thus we also use an odd space character
 %   (with category code $7$) and keep tokens until that space character,
-%   dropping everything else until \cs{q_stop}. The \cs{exp_end:} prevents
+%   dropping everything else until \cs{q_stop}. The \cs{exp_stop:} prevents
 %   losing braces around the user-inserted text if any, and stops the
 %   expansion of \cs{exp:w}.
 %    \begin{macrocode}
@@ -2023,7 +2023,7 @@
             \exp_after:wN \exp_after:wN
             \exp_after:wN \@@_expandable_error:w
             \exp_after:wN \exp_after:wN
-            \exp_after:wN \exp_end:
+            \exp_after:wN \exp_stop:
           }
         \exp_not:N \use:n { \exp_not:c { LaTeX3~error: } ^ #1 } ^
       }
