--- a/l3leftovers/tl-act.dtx
+++ b/l3leftovers/tl-act.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: tl-act.dtx Copyright (C) 2011 The LaTeX3 Project
+%% File: tl-act.dtx Copyright (C) 2011,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -213,7 +213,7 @@
 %       { \tl_act_expand_filler_aux_ii:N }
 %       {
 %         \tl_if_head_begin_group:nTF {#1}
-%           { \exp_end: }
+%           { \exp_stop: }
 %           {
 %             \exp_after:wN \tl_act_expand_filler:w
 %             \exp:w \exp_continue_f:w
@@ -230,7 +230,7 @@
 %         ...
 %         \token_if_eq_catcode:NNTF #1 \c_space_token
 %           { \exp_after:wN \tl_act_expand_filler:w \use_none:n }
-%           { \exp_end: }
+%           { \exp_stop: }
 %       }
 %   }
 %    \end{macrocode}
