backout change of \exp_end: to \exp_stop:

--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -669,7 +669,7 @@
 % Most of these are now available from pkg{l3expan}
 %    \begin{macrocode}
 %\cs_new_eq:NN \@@_exp:w \exp:w
-%\cs_new_eq:NN \@@_exp_stop: \exp_stop:
+%\cs_new_eq:NN \@@_exp_stop: \exp_end:
 %\cs_new_eq:NN \@@_exp_to_f:w \exp_continue_f:w
 \cs_new:Npn \@@_exp_to_f:n #1 { -`0 #1 }         % not provided in l3expan
 %    \end{macrocode}
@@ -904,7 +904,7 @@
 %   parsed version of an infix operator, and \cs{@@_parse_infix_end:N}
 %   has infinitely negative precedence.  Finally, clean up a
 %   (well-defined) set of extra tokens and stop the initial expansion
-%   with \cs{exp_stop:}.
+%   with \cs{exp_end:}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse:n #1
   {
@@ -917,7 +917,7 @@
   }
 \cs_new:Npn \@@_parse_after:ww
     #1@ \@@_parse_infix_end:N \s_@@_stop
-  { \exp_stop: #1 }
+  { \exp_end: #1 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
