--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -602,7 +602,7 @@
 %   to make sure that the redefinition of expandable macros does not
 %   alter their expansion properties.  Namely, it is important for some
 %   macros that |o|-expanding them twice fully expands them, so the
-%   redefined macro uses \cs{exp:w} and \cs{exp_stop:} to make
+%   redefined macro uses \cs{exp:w} and \cs{exp_end:} to make
 %   sure that its second expansion is the same as the second expansion
 %   of the original macro.
 %
@@ -643,7 +643,7 @@
       {
         \exp:w
         \@@_if_on:nT {#2} { \if_false: { \fi: #6 \if_false: } \fi: }
-        \exp_after:wN \exp_after:wN \exp_after:wN \exp_stop:
+        \exp_after:wN \exp_after:wN \exp_after:wN \exp_end:
         #1 #5
       }
   }
