--- a/l3trial/l3fp-extras/l3fp-types.dtx
+++ b/l3trial/l3fp-extras/l3fp-types.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-types.dtx (C) Copyright 2012,2015 The LaTeX3 Project
+%% File l3fp-types.dtx (C) Copyright 2012 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -444,11 +444,11 @@
     \exp:w
     \@@_exp_after_tokens_aux:N #2
       { \s_@@_tokens \exp:w \use_none:nn }
-    \exp_after:wN \exp_stop: #1
+    \exp_after:wN \exp_end: #1
   }
 \cs_new:Npn \@@_exp_after_tokens_aux:N #1
   {
-    \exp_after:wN \exp_stop:
+    \exp_after:wN \exp_end:
     \exp_after:wN #1
     \exp:w
     \@@_exp_after_tokens_aux:N
